# fractal-art-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  shell.nix
src/: generator.rs  lib.rs
