[package]
name = "fractal-art"
version = "0.1.0"
authors = ["TomSmeets <tom@tsmeets.nl>"]
edition = "2018"
description = "This program generates colorful Wallpapers."
license = "MIT"

[dependencies]
image = { version = "0.23", default-features = false, features = [ "bmp" ] }
rand  = { version = "0.7", features = [ "small_rng" ] }
xcb   = "0.9.0"
structopt = "0.3.11"

[profile.release]
panic = 'abort'
