[package]
name = "fractal-art"
version = "0.1.0"
authors = ["TomSmeets <tom@tsmeets.nl>"]
edition = "2018"
description = "This program generates colorful Wallpapers."
license = "MIT"

[dependencies]
image = { version = "0.24", default-features = false, features = [ "bmp" ] }
rand  = { version = "0.8", features = [ "small_rng" ] }
xcb   = "1.2"
structopt = "0.3.11"

[profile.release]
panic = 'abort'
